Fix breadcrumbs on repositories page, tweak some spacing

--- a/app/assets/stylesheets/arclight.scss
+++ b/app/assets/stylesheets/arclight.scss
@@ -4,3 +4,8 @@
 
 // Arclight, imported from arclight frontend package
 @import 'arclight/app/assets/stylesheets/arclight/application';
+
+.al-search-breadcrumb {
+  font-size: 16px;
+  margin-bottom: 2rem;
+}
